@@ -391,15 +391,11 @@ class DiagnosticPlot:
                               #          boxstyle='round, pad=0.25')
                               )
 
-    def add_metar(self, synop : bool = False) -> None:
-        """ Display the ampycloud METAR/SYNOP message.
-
-        Args:
-            synop (bool, optional): If True, will display the full SYNOP message. Defaults to False.
-        """
+    def add_metar(self) -> None:
+        """ Display the ampycloud METAR message."""
 
         # Combine it all in one message
-        msg = r'\smaller \bf ampycloud: ' + self._chunk.metar_msg(synop=synop)
+        msg = r'\smaller \bf ampycloud: ' + self._chunk.metar_msg()
 
         if self._chunk.msa is not None:
             msg += '\n'+r'\smaller\smaller MSA: {} ft'.format(self._chunk.msa)
